--- a/package.json
+++ b/package.json
@@ -19,21 +19,26 @@
     "storybook:build": "build-storybook"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
+    "@clerk/nextjs": "^4.11.5",
+    "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
-    "@mantine/carousel": "6.0.0",
-    "@mantine/core": "6.0.0",
-    "@mantine/dates": "6.0.0",
-    "@mantine/hooks": "6.0.0",
-    "@mantine/next": "6.0.0",
-    "@mantine/notifications": "6.0.0",
+    "@mantine/carousel": "^6.0.1",
+    "@mantine/core": "^6.0.1",
+    "@mantine/dates": "^6.0.1",
+    "@mantine/form": "^6.0.1",
+    "@mantine/hooks": "^6.0.1",
+    "@mantine/modals": "^6.0.1",
+    "@mantine/next": "^6.0.1",
+    "@mantine/notifications": "^6.0.1",
+    "@mantine/nprogress": "^6.0.1",
     "@mantine/prism": "6.0.0",
+    "@mantine/spotlight": "^6.0.1",
     "@next/bundle-analyzer": "^13.1.6",
     "@tabler/icons": "^1.107.0",
     "@tabler/icons-react": "^2.4.0",
     "cookies-next": "^2.1.1",
-    "dayjs": "^1.11.6",
-    "embla-carousel-react": "^7.0.3",
+    "dayjs": "^1.11.7",
+    "embla-carousel-react": "^7.1.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
